begin thread pool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(PRJ_NAME "web_practice")
 set(COMMON "./common")
 set(SOCKET "./socket")
 set(THREAD_POOL "./thread_pool")
+set(TEMPLATE "./template")
 set(TEST_PARAM "test dir" CACHE INTERNAL "test dir description")
 #variable set end
 
@@ -17,6 +18,7 @@ add_compile_options(-g -std=c++17 -Wall)
 
 #sub directory add begin
 add_subdirectory(${COMMON})
+add_subdirectory(${TEMPLATE})
 add_subdirectory(${THREAD_POOL})
 add_subdirectory(${SOCKET})
 #sub directory add end
@@ -26,13 +28,14 @@ add_executable(${PRJ_NAME} main.cpp)
 #exec export end
 
 #package include begin
-FIND_PACKAGE(Threads)
 target_include_directories(${PRJ_NAME} PRIVATE ${COMMON_DIR})
+target_include_directories(${PRJ_NAME} PRIVATE ${TEMPLATE_DIR})
 target_include_directories(${PRJ_NAME} PRIVATE ${SOCK_DIR})
+target_include_directories(${PRJ_NAME} PRIVATE ${THREADPOLL_DIR})
 #package include end
 
 #lib add begin
-target_link_libraries(${PRJ_NAME} PRIVATE ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(${PRJ_NAME} PRIVATE ${COMMON_LIB})
 target_link_libraries(${PRJ_NAME} PRIVATE ${SOCKET_LIB})
+target_link_libraries(${PRJ_NAME} PRIVATE ${THREADPOLL_LIB})
 #lib add end
